--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
         <artifactId>javafx-controls</artifactId>
         <version>17</version>
     </dependency>
+    <dependency>
+        <groupId>com.itextpdf</groupId>
+        <artifactId>itextpdf</artifactId>
+        <version>5.5.13</version>
+    </dependency>
 </dependencies>
     <build>
         <plugins>
