--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,15 @@
             <artifactId>fontbox</artifactId>
             <version>2.0.24</version>
         </dependency>
+        <dependency>
+            <groupId>org.jfxtras</groupId>
+            <artifactId>jfxtras-agenda</artifactId>
+            <version>8.0-r5</version>
+        </dependency>
+
+
+
+
 
     </dependencies>
 
