--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
         <artifactId>itextpdf</artifactId>
         <version>5.5.13</version>
     </dependency>
+    <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-email</artifactId>
+        <version>1.5</version>
+    </dependency>
+
 </dependencies>
     <build>
         <plugins>
